  - Fix unbankrupting a town resetting a town's bank account, vanishing any money that might have been added to the town bank manually during bankruptcy.
0.96.7.8:
  - /ta nation NATIONNAME add TOWNNAME now bypasses the invite and other rules allowing an admin to force-add a town to a nation. 
  - Change it so that admins with the bypass node will not warn towns that an outlawed admin is spying on them.
    - Previously only full admins were preventing warns.
  - Add 3 new events around the displayed nation list, courtesy of Goosius with PR #4810.
    - NationListDisplayedNumOnlinePlayersCalculationEvent
    - NationListDisplayedNumResidentsCalculationEvent
    - NationListDisplayedNumTownsCalculationEvent
  - Add event for the calculation of town map color. courtesy of Goosius with PR #4809.
    - TownMapColourCalculationEvent
  - Update korean.yml, courtesy of yumjunstar with PR #4811.
  - Fix ConcurrentModificationException in Town.
0.96.7.9:
  - Fix for displayed-nation-list events, courtesy of Goosius with PR #4814.
  - Potential fix for being show "Not registered." when attempting to rename a town.
0.96.7.10:
  - Fix TownyWorld setting a town's world when a town is added to a townyworld.
  - Inn Plots no longer turn switch perms on for all groups, instead it uses the TownBlockOwner's perm line like most plot types.
  - Fix reclamation cost confirmation not being sent to the player using the /t reclaim command.
  - New Command: /ta town TOWNNAME unruin
    - Closes #4824.
0.96.7.11:
  - Fix HangingEntity placement all using Painting material for permission tests.
  - API: Add a TownKickEvent, courtesy of Warriorrrr with PR #4831.
  - Fix Spawn Point particles not disappearing when spawn points are moved.
    - Closes #4830.
  - Fix formatted balance for not enough money error, courtesy of Warriorrrr with PR #4833.
  - Fix not using the filteredname earlier on when a town is made. 