@@ -5930,3 +5930,5 @@ v0.92.0.11:
     - Closes #4830.
   - Fix formatted balance for not enough money error, courtesy of Warriorrrr with PR #4833.
   - Fix not using the filteredname earlier on when a town is made. 
+  - API: Add NationKingChangeEvent and TownMayorChangeEvent, courtesy of Warriorrrr with PR #4834.
+  - Small refactor of the bank balance caching. 
